# JPyRust

./: .gitignore  ARCHITECTURE.md  Dockerfile  LICENSE  README.md  README_KR.md  clean_setup_no_venv.bat  clean_venv_setup.bat  fix_python_env.bat  generate_image.py  jitpack.yml  kill_java.ps1  requirements.txt  run_ai.bat  settings.gradle
.github/workflows/: build.yml
demo-web/: README.md  build.gradle.kts  settings.gradle.kts
demo-web/src/main/java/com/jpyrust/: JPyRustBridge.java
demo-web/src/main/java/com/jpyrust/demo/: AIController.java  AIImageController.java  AITextController.java  DemoApplication.java  PluginController.java  StatusController.java
demo-web/src/main/resources/: application.yml
demo-web/src/main/resources/static/: features.html  index.html  video.html
java-api/: ExceptionDump.java  build.gradle.kts  build_log.txt  debug_listing.txt  exception_stack.txt  full_log.txt  full_log_patched.txt  output.txt  settings.gradle.kts
java-api/src/main/java/com/jpyrust/: JPyRust.java  JPyRustBridge.java  NativeLoader.java
java-api/src/main/resources/natives/: librust_bridge.dylib
java-api/src/main/resources/python_dist/: ai_worker.py
java-api/src/test/java/com/jpyrust/: TestLoader.java
python-core/: ai_worker.py  run_ai.bat
python-core/plugins/: sample_math.py
rust-bridge/: Cargo.toml  build.out  build_output.txt
rust-bridge/src/: lib.rs
