[package]
name = "jpyrust"
version = "0.1.0"
edition = "2021"

[lib]
name = "jpyrust"
crate-type = ["cdylib"]

[dependencies]
jni = "0.21.1"
lazy_static = "1.4"
shared_memory = "0.12"

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.52", features = [
    "Win32_Foundation",
    "Win32_System_Memory",
    "Win32_Security",
    "Win32_Security_Authorization",
    "Win32_System_SystemServices",
] }
